# template-python-project

./: .coveragerc  .gitignore  LICENSE  main.py  pyproject.toml
.github/workflows/: coverage-report.yml  pytest-app.yml  python-app.yml
config/: application.toml  logging.yaml
config/default/: application-default.toml  logging-default.yaml
src/module0/: module0.py
tests/: test_module0.py
